Fixed content shift on ProductPage(SKU shift)

--- a/packages/scandipwa/src/component/Router/Router.style.scss
+++ b/packages/scandipwa/src/component/Router/Router.style.scss
@@ -33,6 +33,10 @@
         justify-content: center;
         align-items: center;
 
+        @include mobile {
+            padding-block-start: calc(var(--demo-notice-height));
+        }
+
         .TextPlaceholder {
             @include desktop {
                 font-size: 52px;
@@ -43,6 +47,10 @@
         inset-block-start: 0;
         width: 100%;
         z-index: 5;
+    }
+
+    &-HeaderProductSku {
+        margin-block-start: -3px;
     }
 
     &-BreadcrumbsFallback {
